niri-lua/src/snapshots/niri_lua__event_data__tests__event_categories.snap
---
source: niri-lua/src/event_data.rs
expression: categories
---
(
    "window",
    "workspace",
    "monitor",
    "layout",
)
