niri-lua/src/snapshots/niri_lua__event_data__tests__event_data_layout_mode_changed.snap
---
source: niri-lua/src/event_data.rs
expression: event
---
ModeChanged {
    is_floating: true,
}
