niri-lua/src/snapshots/niri_lua__event_data__tests__event_data_workspace_activate.snap
---
source: niri-lua/src/event_data.rs
expression: event
---
Activate {
    workspace: Workspace {
        id: 1,
        idx: 1,
        name: Some(
            "Main",
        ),
        output: Some(
            "DP-1",
        ),
        is_urgent: false,
        is_active: true,
        is_focused: true,
        active_window_id: Some(
            123,
        ),
    },
    output: Output {
        name: "DP-1",
        make: "Samsung",
        model: "S27AG50",
        serial: Some(
            "SN123456",
        ),
        physical_size: Some(
            (
                600,
                340,
            ),
        ),
        modes: [],
        current_mode: None,
        is_custom_mode: false,
        vrr_supported: false,
        vrr_enabled: false,
        logical: None,
    },
}
